# RustVariadics

./: Cargo.toml  README.md
src/: fold.rs  lib.rs  pack.rs  pattern.rs  tokens.rs
