[package]
name = "RustVariadics"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version ="1.0.14", features=["full"]}
quote = "1.0.2"
proc-macro2 = "1.0.8"

[lib]
